log
Sat, May 17, 2025  5:50:58 PM: 
 sudoku.c | 125 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 122 insertions(+), 3 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:184:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f0e54c
Sat, May 17, 2025  5:51:23 PM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:184:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
7421b97
Sat, May 17, 2025  5:52:37 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
935bc04
Sat, May 17, 2025  5:55:22 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
3998655
Sat, May 17, 2025  6:02:32 PM: 
 sudoku.c | 21 ---------------------
 1 file changed, 21 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
8404e58
Sat, May 17, 2025  6:03:40 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
cbeabba
Sat, May 17, 2025  6:13:32 PM: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  10|0
total_score: 70/70
2e20184
